<resources>
    <string name="app_name">Trivia Quiz</string>

    <!-- Strings related to login -->
    <string name="login_title">Login</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remember_me">Remember Me</string>
    <string name="action_sign_in">Sign in</string>
    <string name="new_account">No account yet? Create one</string>

    <!-- strings for registration page -->
    <string name="registration_title">Registration</string>
    <string name="registration_first_name">First Name</string>
    <string name="registration_last_name">Last Name</string>
    <string name="registration_email">Email Address</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm Password</string>
    <string name="registration_birth_date">Birth Date</string>
    <string name="registration_button">Create Account</string>
    <string name="registration_login_link">Already a member? Login</string>
    <string name="registration_result">Your Registration is Successfully</string>

    <!-- strings for error messages -->
    <string name="error_min_length">At least 3 characters</string>
    <string name="error_min_length_password">At least 5 characters</string>
    <string name="error_max_length">Limit of 30 characters</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_match_password">Passwords must match</string>

    <!-- strings for menu -->
    <string name="menu_scorecard">Score Card</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rules">How to Play</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_image">Profile Picture</string>

    <!-- strings for home screen -->
    <string name="home_computer">Computer</string>
    <string name="home_sports">Sports</string>
    <string name="home_inventions">Inventions</string>
    <string name="home_general">General Knowledge</string>
    <string name="home_science">Science</string>
    <string name="home_english">English</string>
    <string name="home_authors">Authors</string>
    <string name="home_maths">Mathematics</string>
    <string name="home_capitals">Capitals</string>
    <string name="home_currency">Currency</string>

    <!-- strings for results page -->
    <string name="results_statistics">Statistics</string>
    <string name="results_questions">Attempted Questions :</string>
    <string name="results_correct">Correct :</string>
    <string name="results_incorrect">Incorrect :</string>
    <string name="results_bad">You Need Improvement</string>
    <string name="results_average">You are an average Quizzer</string>
    <string name="results_above">You are an above average Quizzer</string>
    <string name="results_brilliant">You are a brilliant Quizzer</string>

    <!-- strings for splash page-->
    <string name="splash_image">Picture of Logo</string>

    <!-- strings for settings page -->
    <string name="settings_reset">Reset All Scores</string>

    <!-- title strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_score_card">Score Card</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_rules">How to Play</string>

    <!-- strings for main game -->
    <string name="playButton">Play</string>
    <string name="pictureCategory">picture of category</string>

    <!-- strings for score page -->
    <string name="score_category_title">Categories</string>
    <string name="score_recent_title">Recent Score</string>
    <string name="score_high_title">High Score</string>

    <!-- strings for rules page -->
    <string name="rules_category">First, Select a Category</string>
    <string name="rules_quiz_size">Then choose a quiz size</string>
    <string name="rules_quiz_size_description">Short 10 questions, or all questions for that category</string>
    <string name="rules_play">Click Play</string>
    <string name="rules_play_description">You will now be given questions based on the category you selected</string>
    <string name="rules_buttonA">A</string>
    <string name="rules_buttonB">B</string>
    <string name="rules_buttonC">C</string>
    <string name="rules_buttonD">D</string>
    <string name="rules_correct">Select the correct answer</string>
    <string name="rules_correct_description">For each question you get right you score 10 points</string>

</resources>