<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- side menu -->
    <group android:checkableBehavior="single">
        <!-- score card item -->
        <item
            android:id="@+id/nav_ScoreCard"
            android:icon="@drawable/scorecard_drawer"
            android:title="@string/menu_scorecard" />
        <!-- settings item -->
        <item
            android:id="@+id/nav_Setting"
            android:icon="@drawable/setting_drawer"
            android:title="@string/menu_settings" />
        <!-- how to play item -->
        <item
            android:id="@+id/nav_Rules"
            android:icon="@drawable/help_drawer"
            android:title="@string/menu_rules" />
        <!-- logout item -->
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>