<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Rules">

    <!-- top navigation toolbar-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- container for scores-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rules_marginTop"
                android:layout_marginBottom="@dimen/rules_marginBottom"
                android:text="@string/rules_category"
                android:textAlignment="center"
                android:textColor="@color/gameBlack"
                android:textSize="@dimen/rules_titleSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rules_marginTop"
                android:text="@string/rules_quiz_size"
                android:textAlignment="center"
                android:textColor="@color/gameBlack"
                android:textSize="@dimen/rules_titleSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rules_marginBottom"
                android:text="@string/rules_quiz_size_description"
                android:textAlignment="center"
                android:textSize="@dimen/rules_textSize" />

            <TextView
                android:layout_width="@dimen/game_playButton_Size"
                android:layout_height="@dimen/game_playButton_Size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/fab_margin"
                android:background="@drawable/custom_option"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/playButton"
                android:textColor="@color/white"
                android:textSize="@dimen/game_playButton_textSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rules_marginTop"
                android:text="@string/rules_play"
                android:textAlignment="center"
                android:textColor="@color/gameBlack"
                android:textSize="@dimen/rules_titleSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rules_marginBottom"
                android:text="@string/rules_play_description"
                android:textAlignment="center"
                android:textSize="@dimen/rules_textSize" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/game_linearLayout_height"
                android:layout_marginTop="@dimen/game_linearLayout_marginTop"
                android:orientation="horizontal">

                <!-- button a -->
                <Button
                    android:id="@+id/OptionA"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/game_button_padding"
                    android:text="@string/rules_buttonA"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/game_button_textSize"
                    app:layout_constraintBottom_toTopOf="@+id/OptionC"
                    app:layout_constraintEnd_toStartOf="@id/OptionB"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- button b -->
                <Button
                    android:id="@+id/OptionB"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/game_button_padding"
                    android:text="@string/rules_buttonB"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/game_button_textSize"
                    app:layout_constraintBottom_toTopOf="@+id/OptionD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/OptionA"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- button c -->
                <Button
                    android:id="@+id/OptionC"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/game_button_padding"
                    android:text="@string/rules_buttonC"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/game_button_textSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/OptionD"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/OptionA" />

                <!-- button d -->
                <Button
                    android:id="@+id/OptionD"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/game_button_padding"
                    android:text="@string/rules_buttonD"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/game_button_textSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/OptionC"
                    app:layout_constraintTop_toBottomOf="@+id/OptionB" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rules_marginTop"
                android:text="@string/rules_correct"
                android:textAlignment="center"
                android:textColor="@color/gameBlack"
                android:textSize="@dimen/rules_titleSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rules_marginBottom"
                android:text="@string/rules_correct_description"
                android:textAlignment="center"
                android:textSize="@dimen/rules_textSize" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>