<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Result">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- top navigation toolbar-->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <!-- title textView -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/results_statistics"
            android:textSize="@dimen/result_title_textSize" />

        <!-- final score textView-->
        <TextView
            android:id="@+id/result_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/result_textView_marginTop"
            android:gravity="center"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/result_textView_textSize" />

        <!-- dividing line -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/result_divider_height"
            android:layout_marginTop="@dimen/result_divider_marginTop"
            android:background="@color/resultGrey" />

        <!-- container for attempted questions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/result_linearLayout_marginTop"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_questions"
                android:textColor="@color/gold"
                android:textSize="@dimen/result_textView_textSize2" />

            <TextView
                android:id="@+id/result_attempted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gold"
                android:textSize="@dimen/result_textView_textSize2" />
        </LinearLayout>

        <!-- container for correct questions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/result_linearLayout_marginTop2"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_correct"
                android:textColor="@color/resultGreen"
                android:textSize="@dimen/result_textView_textSize2" />

            <TextView
                android:id="@+id/result_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/resultGreen"
                android:textSize="@dimen/result_textView_textSize2" />
        </LinearLayout>

        <!-- container for incorrect questions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/result_linearLayout_marginTop2"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_incorrect"
                android:textColor="@color/resultRed"
                android:textSize="@dimen/result_textView_textSize2" />

            <TextView
                android:id="@+id/result_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/resultRed"
                android:textSize="@dimen/result_textView_textSize2" />
        </LinearLayout>

        <!-- dividing line -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/result_divider_height"
            android:layout_marginTop="@dimen/result_textView_marginTop2"
            android:background="@color/dividerGrey" />

        <!-- result message -->
        <TextView
            android:id="@+id/result_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/result_textView_marginTop"
            android:layout_marginBottom="@dimen/result_textView_marginTop"
            android:gravity="center"
            android:textColor="@color/resultBlue"
            android:textSize="@dimen/result_textView_textSize2" />
    </LinearLayout>
</ScrollView>